Removes useless css on menu icon

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-navbar color="lipstick">
-        <button class="home-button-menu-toggle" ion-button menuToggle start>
+        <button ion-button menuToggle start>
             <ion-icon color="white" name="menu"></ion-icon>
         </button>
         <ion-title>
