--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,6 @@
-<ion-header>
-    <ion-navbar color="lipstick">
+<ion-header no-border>
+    <div class="halloween-header"></div>
+    <ion-navbar color="primary">
         <button ion-button menuToggle start>
             <ion-icon color="white" name="menu"></ion-icon>
         </button>
