--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -26,19 +26,18 @@
             <p>Vliller a été conçue dans un objectif de recherche et sans but lucratif. Elle utilise des données ouvertes fournies par la Métropole Européenne de Lille. <strong>Elle est gratuite, et aucune donnée tierce n'est ou ne sera revendue.</strong></p>
 
             <p text-center padding-top>
-                <a ion-text color="light" href="http://vliller.alexetmanon.com" (click)="openLink('http://vliller.alexetmanon.com')">vliller.alexetmanon.com</a>
+                <a ion-text color="light" href="http://vliller.com" (click)="openLink('http://vliller.com')">vliller.com</a>
             </p>
         </div>
 
         <div class="about-legals" padding>
             <h2>Informations légales</h2>
 
-            <div><button ion-button clear color="light" (click)="openLink('http://vliller.alexetmanon.com/privacy-policy.html')">Politique de confidentialité</button></div>
+            <div><button ion-button clear color="light" (click)="openLink('http://vliller.com/privacy-policy.html')">Politique de confidentialité</button></div>
 
             <div><button ion-button clear color="light" (click)="openLink('https://opendata.lillemetropole.fr/explore/dataset/vlille-realtime/')">OpenData MEL</button></div>
 
             <div><button ion-button clear color="light" (click)="openLink('https://github.com/alexetmanon/vliller')">Vliller sur Github</button></div>
         </div>
     </div>
-    <aetm-footer></aetm-footer>
 </ion-content>
