--- a/src/pages/sidemenu/sidemenu.html
+++ b/src/pages/sidemenu/sidemenu.html
@@ -34,7 +34,7 @@
 </div>
 
 <footer class="sidemenu-footer">
-    <p>Conçu et développé par <a (click)="openLink('http://alexetmanon.com')">alex&nbsp;et&nbsp;manon</a> et tous nos supers contributeurs !</p>
+    <p>Conçu et développé par <a (click)="openLink('http://alexandrebonhomme.com')">Alexandre Bonhomme</a>, <a (click)="openLink('http://manonverbeke.com')">Manon Verbeke</a> et tous nos supers contributeurs !</p>
     <p>Version {{ appVersion }}</p>
     <img class="img-responsive" src="assets/img/halloween/vliller-zombie.svg">
 </footer>
