Hide halloween theme

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header no-border>
-    <div class="halloween-header"></div>
-    <ion-navbar color="primary">
+    <!-- <div class="halloween-header"></div> -->
+    <ion-navbar color="lipstick">
         <button ion-button menuToggle start>
             <ion-icon color="white" name="menu"></ion-icon>
         </button>
