--- a/src/pages/sidemenu/sidemenu.html
+++ b/src/pages/sidemenu/sidemenu.html
@@ -1,5 +1,6 @@
 <header class="sidemenu-header">
-    <img class="img-responsive" src="assets/img/halloween/vliller-header-sidemenu-logo.svg">
+    <!-- <img class="img-responsive" src="assets/img/halloween/vliller-header-sidemenu-logo.svg"> -->
+    <img class="img-responsive" src="assets/img/vliller-header-sidemenu-logo.svg">
 </header>
 
 <div class="sidemenu-main border-bottom">
@@ -36,5 +37,5 @@
 <footer class="sidemenu-footer">
     <p>Conçu et développé par <a (click)="openLink('http://alexandrebonhomme.com')">Alexandre Bonhomme</a>, <a (click)="openLink('http://manonverbeke.com')">Manon Verbeke</a> et tous nos supers contributeurs !</p>
     <p>Version {{ appVersion }}</p>
-    <img class="img-responsive" src="assets/img/halloween/vliller-zombie.svg">
+    <!-- <img class="img-responsive" src="assets/img/halloween/vliller-zombie.svg"> -->
 </footer>
