Moves Vliller github repo

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -37,7 +37,7 @@
 
             <div><button ion-button clear color="light" (click)="openLink('https://opendata.lillemetropole.fr/explore/dataset/vlille-realtime/')">OpenData MEL</button></div>
 
-            <div><button ion-button clear color="light" (click)="openLink('https://github.com/alexetmanon/vliller')">Vliller sur Github</button></div>
+            <div><button ion-button clear color="light" (click)="openLink('https://github.com/Vliller/vliller')">Vliller sur Github</button></div>
         </div>
     </div>
 </ion-content>
