--- a/src/pages/contribs/contribs.html
+++ b/src/pages/contribs/contribs.html
@@ -21,9 +21,9 @@
             <h4>contribuez au développement de Vliller !</h4>
 
             <div padding>
-                <button type="button" ion-button block color="secondary" (click)="openLink('https://github.com/alexetmanon/vliller')" margin-bottom>Contribuer sur Github</button>
+                <button type="button" ion-button block color="secondary" (click)="openLink('https://github.com/Vliller/vliller')" margin-bottom>Contribuer sur Github</button>
 
-                <button type="button" ion-button block outline color="secondary" (click)="openLink('https://github.com/alexetmanon/vliller/issues')">Proposer une amélioration</button>
+                <button type="button" ion-button block outline color="secondary" (click)="openLink('https://github.com/Vliller/vliller/issues')">Proposer une amélioration</button>
             </div>
         </div>
 
