--- a/src/pages/sidemenu/sidemenu.html
+++ b/src/pages/sidemenu/sidemenu.html
@@ -16,7 +16,7 @@
         Noter Vliller
     </button>
 
-    <button ion-button clear color="light" icon-left (click)="openLink('mailto:vliller@alexetmanon.com?subject=[Vliller]%20')" >
+    <button ion-button clear color="light" icon-left (click)="openLink('mailto:vliller@aqelia.com?subject=[Vliller]%20')" >
         <ion-icon name="mail"></ion-icon>
         Contacter l'équipe Vliller
     </button>
