fix: favorites css

--- a/src/pages/favorites/favorites.html
+++ b/src/pages/favorites/favorites.html
@@ -35,7 +35,7 @@
             </ion-item>
             <ion-item-options side="right">
                 <button ion-button class="custom-btn" (click)="removeFavorite(station)">
-                    <ion-icon name="trash"></ion-icon>
+                    <img class="img-responsive" src="assets/img/vliller-icon-trash.svg">
                 </button>
             </ion-item-options>
         </ion-item-sliding>
